--- a/header.partial.html
+++ b/header.partial.html
@@ -12,9 +12,9 @@
     </div>
   </div>
   <nav class="header__nav">
-    <a href="about-location.html" class="header__nav-link">About</a>
-    <a href="#" class="header__nav-link">Gallery</a>
-    <a href="#" class="header__nav-link">Accomodation</a>
-    <a href="#" class="header__nav-link">How to get there</a>
+    <a href="about-location.html" class="header__nav-link">Привет,</a>
+    <a href="#" class="header__nav-link">Тут</a>
+    <a href="#" class="header__nav-link">Был</a>
+    <a href="#" class="header__nav-link">Г. Влад</a>
   </nav>
 </header>
