--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="img/bone-icon.svg"
       type="image/x-icon"
     />
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header data-include="header.partial.html"></header>
