Added part of footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section data-include="index.products.partial.html"></section>
       <section data-include="index.contacts.partial.html"></section>
     </main>
-    <footer></footer>
+    <footer data-include="footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
   </body>
 </html>
