created pricing section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <main>
       <section data-include="index.products.partial.html"></section>
       <section data-include="index.contacts.partial.html"></section>
+      <secton data-include="index.pricing.partial.html"></secton>
     </main>
     <footer data-include="footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
