--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -1,65 +1,65 @@
-<section>
-  <div>
-    <div>
-      <h2>&ndash; Pricing</h2>
-      <h3>Pricing Plans and our Services</h3>
-      <p>
+<section class="pricing">
+  <div class="pricing__content">
+    <div class="pricing__info">
+      <h2 class="pricing__title">&ndash; Pricing</h2>
+      <h3 class="pricing__subtitle">Pricing Plans and our Services</h3>
+      <p class="pricing__description">
         We offer our clients all the necessary services for the health of their
         pets. Here you will find attractive prices for all types of services. We
         work 7 days a week but recommend making an appointment in advance.
       </p>
-      <div>
-        <div>
+      <div class="pricing__schedule">
+        <div class="pricing__day">
           <p>Mon - Fr:</p>
           <p>Saturday:</p>
           <p>Sunday</p>
         </div>
-        <div>
+        <div class="pricing__time">
           <p>08.00 am - 20.00 pm</p>
           <p>09.00 am - 20.00 pm</p>
           <p>09.00 am - 18.00 pm</p>
         </div>
       </div>
     </div>
-    <div>
-      <button type="button">
-        <svg class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1704797658501"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1704797658501"></use></svg>
+    <div class="pricing__plan">
+      <button type="button" class="pricing__arrow">
+        <svg class="pricing__arrow-svg" class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1704797658501"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1704797658501"></use></svg>
       </button>
-      <div>
-        <p>$50</p>
-        <h3>Initial Checkup</h3>
-        <ul>
+      <div class="pricing__details">
+        <p class="pricing__price">$50</p>
+        <h3 class="pricing__plan-title">Initial Checkup</h3>
+        <ul class="pricing__features">
           <li>Checkup by a veterinarian</li>
           <li>Care recommendations</li>
           <li>Laboratory tests</li>
           <li>Dental care</li>
         </ul>
-        <button type="button">Select Plan &rarr;</button>
+        <button type="button" class="pricing__select-plan">Select Plan &rarr;</button>
       </div>
-      <div>
-        <p>$75</p>
-        <h3>Full Checkup</h3>
-        <ul>
+      <div class="pricing__details">
+        <p class="pricing__price">$75</p>
+        <h3 class="pricing__plan-title">Full Checkup</h3>
+        <ul class="pricing__features">
           <li>Checkup by a veterinarian</li>
           <li>Checkup by a dentist</li>
           <li>Laboratory tests</li>
           <li>Preventive vaccination</li>
         </ul>
-        <button type="button">Select Plan &rarr;</button>
+        <button type="button" class="pricing__select-plan">Select Plan &rarr;</button>
       </div>
-      <div>
-        <p>$100</p>
-        <h3>Vaccination</h3>
-        <ul>
+      <div class="pricing__details">
+        <p class="pricing__price">$100</p>
+        <h3 class="pricing__plan-title">Vaccination</h3>
+        <ul class="pricing__features">
           <li>3 available features</li>
           <li>10 requests per month</li>
           <li>General support</li>
           <li>Personal consultations</li>
         </ul>
-        <button type="button">Select Plan &rarr;</button>
+        <button type="button" class="pricing__select-plan">Select Plan &rarr;</button>
       </div>
-      <button type="button">
-        <svg class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1704797658501"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1704797658501"></use></svg>
+      <button type="button" class="pricing__arrow">
+        <svg class="pricing__arrow-svg" class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1704797658501"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1704797658501"></use></svg>
       </button>
     </div>
   </div>
