Change photo in FAQ block

--- a/index.faq.partial.html
+++ b/index.faq.partial.html
@@ -1,7 +1,7 @@
 <section class="faq">
     <div class="faq__animals-photo-list">
         <button class="faq__animals-photo-previous" type="button">←</button>
-        <img width="435" src="img/faq-slider-carrot.webp" alt="photo1" class="faq__animals-photo-item">
+        <img width="435" src="img/faq-slider-dog.webp" alt="photo1" class="faq__animals-photo-item">
         <img width="435" src="img/faq-slider-cat.webp" alt="photo2" class="faq__animals-photo-item">
         <img width="435" src="img/faq-slider-carrot.webp" alt="photo3" class="faq__animals-photo-item">
         <button class="faq__animals-photo-next" type="button">→</button>
