Добавлен пункт шапки и стр discoveries.html

--- a/header.partial.html
+++ b/header.partial.html
@@ -1,10 +1,11 @@
 <header class="header">
     <div class="header__container">
-        <div class="header__logo">
-            <a href="index.html"></a>
-        </div>
+        <a href="index.html">
+        <div class="header__logo"></div>
+        </a>
 
         <nav class="header__nav">
+            <div class="header__nav-services headernavitem"><a href="discoveries.html">Discoveries of Vet.Med.</a></div>
             <div class="header__nav-services headernavitem"><a href="#">Services</a></div>
             <div class="header__nav-pricing headernavitem"><a href="#">Pricing</a></div>
             <div class="header__nav-testimonials headernavitem"><a href="#">Testimonials</a></div>
