Добавлені  Hours,Address,Contscts

--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,5 +1,20 @@
 <section class="contacts">
     <h2 class="contacts__tittle">Contacts</h2>
+    <div>
+        <p><b>Have Quastions?</b></p>
+    </div>
+    <div>
+        <p><b>Address</b> 80-05 78th Ave
+            Flushing, NY 11385</p>
+    </div>
+    <div>
+        <p><b>Hours</b> Monday - Saturday: 11 AM - 9 PM
+            Sunday: 11 AM - 7 PM</p>
+    </div>
+    <div>
+        <p><b>Contacts</b> +1 (234) 567 89 00
+            healthypet@email.com</p>
+    </div>
     <div class="contacts__container">
         <div class="contacts_map">
             <iframe
