Добавлены классы для Phone mail address and hours

--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -3,15 +3,15 @@
     <div>
         <p><b>Have Quastions?</b></p>
     </div>
-    <div>
+    <div class="contacts__Address">
         <p><b>Address</b> 80-05 78th Ave
             Flushing, NY 11385</p>
     </div>
-    <div>
+    <div class="contacts_Hours">
         <p><b>Hours</b> Monday - Saturday: 11 AM - 9 PM
             Sunday: 11 AM - 7 PM</p>
     </div>
-    <div>
+    <div class="contacts__Phoneandmail">
         <p><b>Contacts</b> +1 (234) 567 89 00
             healthypet@email.com</p>
     </div>
