--- a/header.partial.html
+++ b/header.partial.html
@@ -5,7 +5,7 @@
         </a>
 
         <nav class="header__nav">
-            <div class="header__nav-services headernavitem"><a href="discoveries.html">Discoveries of Vet.Med.</a></div>
+            <div class="header__nav-item header__nav-item--services"><a href="discoveries.html">Discoveries of Vet.Med.</a></div>
             <div class="header__nav-services headernavitem"><a href="#">Services</a></div>
             <div class="header__nav-pricing headernavitem"><a href="#">Pricing</a></div>
             <div class="header__nav-testimonials headernavitem"><a href="#">Testimonials</a></div>
