--- a/header.partial.html
+++ b/header.partial.html
@@ -11,7 +11,7 @@
             <div class="header__nav-testimonials headernavitem"><a href="#">Testimonials</a></div>
             <div class="header__nav-contactus headernavitem"><a href="#">Contact us</a></div>
         </nav>
-        <div class="header__social">
+        <div class="header__social social">
             <div class="social__itemconteiner">
                 <a href="https://facebook.com/">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-facebook social__itemimg"
