--- a/index.why-us.partial.html
+++ b/index.why-us.partial.html
@@ -1,7 +1,7 @@
 <section class="why-choose-us">
   <h2>Why Choose Us</h2>
 
-  <div class="why-choose-us__items>
+  <div class="why-choose-us__items">
     <div class="why-choose-us__item">
         <img
           width="40"
