--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,22 +1,22 @@
 <section class="contacts">
-    <h2 class="contacts__tittle">Contacts</h2>
+    <h2 class="contacts__title">Contacts</h2>
     <div>
         <p><b>Have Quastions?</b></p>
     </div>
-    <div class="contacts__Address">
+    <div class="contacts__address">
         <p><b>Address</b> 80-05 78th Ave
             Flushing, NY 11385</p>
     </div>
-    <div class="contacts_Hours">
+    <div class="contacts__pours">
         <p><b>Hours</b> Monday - Saturday: 11 AM - 9 PM
             Sunday: 11 AM - 7 PM</p>
     </div>
-    <div class="contacts__Phoneandmail">
+    <div class="contacts__phoneandmail">
         <p><b>Contacts</b> +1 (234) 567 89 00
             healthypet@email.com</p>
     </div>
     <div class="contacts__container">
-        <div class="contacts_map">
+        <div class="contacts__map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18442.0312360889!2d35.042573802342936!3d48.4630276514509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbe2dd7cd733b5%3A0xc5ea4bfee75bb576!2z0KLQpiDQn9Cw0YHRgdCw0LY!5e0!3m2!1sru!2sua!4v1704802985793!5m2!1sru!2sua"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
