deleted id for textarea

--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -27,7 +27,7 @@
             <input typr="text" name="full-name" placeholder="enter your full name" required>
             <input typr="tel" name="full-name" placeholder="enter your tel" required>
             <input typr="email" name="full-name" placeholder="enter your email" required>
-            <textarea name="comments" id="" cols="30" rows="10" placeholder="comments"></textarea>
+            <textarea name="comments"  cols="30" rows="10" placeholder="comments"></textarea>
             <input type="submit" value="Request a quote">
         </form>
         <div class="contacts__form">
