--- a/discoveries.html
+++ b/discoveries.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Discoveries</title>
     <link rel="shortcut icon" href="img/bone-icon.svg" type="image/x-icon"/>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
     <body>
         <header data-include="header.partial.html"></header>
