--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>*The Best Cabin Rental*</title>
     <link rel="shortcut icon" href="img/bone-icon.svg" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <header data-include="header.partial.html"></header>
