--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -24,14 +24,11 @@
             </iframe>
         </div>
         <form class="contacts__form" action="https://formspree.io/f/mleqeqap" method="post">
-            <input typr="text" name="full-name" placeholder="enter your full name" required>
-            <input typr="tel" name="full-name" placeholder="enter your tel" required>
-            <input typr="email" name="full-name" placeholder="enter your email" required>
-            <textarea name="comments"  cols="30" rows="10" placeholder="comments"></textarea>
+            <input type="text" name="full-name" placeholder="enter your full name" required>
+            <input type="tel" name="full-name" placeholder="enter your tel" required>
+            <input type="email" name="full-name" placeholder="enter your email" required>
+            <textarea name="comments" cols="30" rows="10" placeholder="comments"></textarea>
             <input type="submit" value="Request a quote">
         </form>
-        <div class="contacts__form">
-
-        </div>
     </div>
 </section>
