Add some styles for footer

--- a/footer.partial.html
+++ b/footer.partial.html
@@ -6,10 +6,10 @@
       </a>
     </div>
     <nav class="footer__nav">
-      <a href="#" class="footer__nav__item">Services</a>
-      <a href="#" class="footer__nav__item">Pricing</a>
-      <a href="#" class="footer__nav__item">Testmonials</a>
-      <a href="#" class="footer__nav__item">Contact us</a>
+      <a href="#" class="footer__nav-item">Services</a>
+      <a href="#" class="footer__nav-item">Pricing</a>
+      <a href="#" class="footer__nav-item">Testmonials</a>
+      <a href="#" class="footer__nav-item">Contact us</a>
     </nav>
     <div class="footer__follow">
       <h3>Follow us:</h3>
