--- a/index.carousel.partial.html
+++ b/index.carousel.partial.html
@@ -1,43 +1,43 @@
 <div class="carousel">
     <div class="carousel__track-container">
       <ul class="carousel__track">
-        <li class="carousel__slide Pet Grooming">
-          <img src="img/pet grooming.jpg" alt="Pet Grooming" class="carousel__image">
+        <li class="carousel__slide pet grooming">
+          <img src="img/pet grooming.jpg" alt="pet grooming" class="carousel__image">
           <h3>Pet Grooming</h3>
           <p>Our groomers will make your pet the most beautiful. Grooming in our clinic is absolutely safe and comfortable
             for your pet.</p>
           <span style="font-weight:bold">Read More ➞</span>
         </li>
         <li class="carousel__slide pet vaccination">
-          <img src="img/pet vaccination.jpg" alt="Pet Vaccination" class="carousel__image">
+          <img src="img/pet vaccination.jpg" alt="pet vaccination" class="carousel__image">
           <h3>Pet Vaccination</h3>
           <p>Our veterinary clinic offers vaccinations for your pets. We use only certified vaccines and check the
             allergic reaction. </p>
           <span style="font-weight:bold">Read More ➞</span>
         </li>
         <li class="carousel__slide surgeries&dental care">
-          <img src="img/surgeries dental care.jpg" alt="Surgeries&Dental Care" class="carousel__image">
+          <img src="img/surgeries dental care.jpg" alt="surgeries dental care" class="carousel__image">
           <h3>Surgeries & Dental Care</h3>
           <p>Our surgeons and dentists will perform all the necessary procedures and interventions to restore the health
             of your pet.</p>
           <span style="font-weight:bold">Read More ➞</span>
         </li>
         <li class="carousel__slide pet adoptation">
-          <img src="img/pet adoptation.jpg" alt="Pet Adoptation" class="carousel__image">
+          <img src="img/pet adoptation.jpg" alt="pet adoptation" class="carousel__image">
           <h3>Pet Adoption</h3>
           <p>If you want to adopt a pet, our veterinary clinic will help you determine its condition. We also can help
             with choosing a pet.</p>
           <span style="font-weight:bold">Read More ➞</span>
         </li>
         <li class="carousel__slide pet sitting">
-          <img src="img/pet sitting.jpg" alt="Pet Sitting" class="carousel__image">
+          <img src="img/pet sitting.jpg" alt="pet sitting" class="carousel__image">
           <h3>Pet Sitting</h3>
           <p>If you want to adopt a pet, our veterinary clinic will help you determine its condition. We also can help
             with choosing a pet. </p>
           <span style="font-weight:bold">Read More ➞</span>
         </li>
         <li class="carousel__slide microchipping">
-          <img src="img/microchipping.jpg" alt="Microchipping" class="carousel__image">
+          <img src="img/microchipping.jpg" alt="microchipping" class="carousel__image">
           <h3>Microchipping</h3>
           <p>The chip contains a unique code with important information. If your pet is lost, it will be easy to return it
             to you.</p>
