--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <header data-include="header.partial.html"></header>
     <main>
+      <section data-include="banner.partial.dog&about-us.html"></section>
       <section data-include="index.why-us.partial.html"></section>
       <section data-include="index.products.partial.html"></section>
       <section data-include="index.contacts.partial.html"></section>
