--- a/index.about-us.partial.html
+++ b/index.about-us.partial.html
@@ -1,13 +1,13 @@
 <section>
     <h2>About Us</h2>
-    <h3>We Do Our Best to Keep Your Pets Healthy</h3>
+    <p>We Do Our Best to Keep Your Pets Healthy</p>
     <p>Our veterinary clinic has been operating for over 20 years. We have successfully cured thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
-    <ul>
+    <ul class="custom-list">
         <li>Ratologists, felinologists, cynologists, and other specialists;</li>
         <li>All necessary examinations in one comfortable place;</li>
         <li>A large list of related services at reasonable prices.</li>
     </ul>
-    <button>See Pricing</button>
+    <a href="your-link-here" class="btn">See Pricing</a>
     <div>
         <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f682a08d7f83a0021b6d54d_optimized_951_c951x837-0x0.webp" alt="Our Staff">
     </div>
