--- a/index.about-us.partial.html
+++ b/index.about-us.partial.html
@@ -1,14 +1,16 @@
-<section>
-    <h2>About Us</h2>
-    <p>We Do Our Best to Keep Your Pets Healthy</p>
-    <p>Our veterinary clinic has been operating for over 20 years. We have successfully cured thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
-    <ul class="custom-list">
-        <li>Ratologists, felinologists, cynologists, and other specialists;</li>
-        <li>All necessary examinations in one comfortable place;</li>
-        <li>A large list of related services at reasonable prices.</li>
+<section class="about-us">
+    <h2 class="title">About Us</h2>
+    <p> class="subtitle">We Do Our Best to Keep Your Pets Healthy</p>
+    <p class="intro">We Do Our Best to Keep Your Pets Healthy</p>
+    <p class="description">Our veterinary clinic has been operating for over 20 years. We have successfully cured thousands of pets, from dogs and cats to exotic pets such as parrots, monkeys, etc.</p>
+    <ul class="services-list">
+        <li class="service-item">Ratologists, felinologists, cynologists, and other specialists;</li>
+        <li class="service-item">All necessary examinations in one comfortable place;</li>
+        <li class="service-item">A large list of related services at reasonable prices.</li>
     </ul>
-    <a href="your-link-here" class="btn">See Pricing</a>
-    <div>
+    <button class="pricing-btn">See Pricing</button>
+    <a href="your-link-here" class="btn pricing-link">See Pricing</a>
+    <div class="staff-image">
         <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f682a08d7f83a0021b6d54d_optimized_951_c951x837-0x0.webp" alt="Our Staff">
     </div>
 </section>
