--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <section data-include="index.faq.partial.html"></section>
       <section data-include="index.about-us.partial.html"></section>
       <section data-include="index.partners-carousel.partial.html"></section>
+      <section data-include="index.contacts.partial.html"></section>
     </main>
     <footer data-include="footer.partial.html"></footer>
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
