added article card

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -38,7 +38,8 @@
         </svg>
       </button>
       <div class="pricing__details">
-        <p class="pricing__price">$50</p>
+        <article class="pricing__details-card">
+         <p class="pricing__price">$50</p>
         <h3 class="pricing__plan-title">Initial Checkup</h3>
         <ul class="pricing__features">
           <li>Checkup by a veterinarian</li>
@@ -144,8 +145,11 @@
         </ul>
         <a href="#" class="pricing__select-plan">Select Plan &rarr;</a>
       </div>
+        </article> 
+        
       <div class="pricing__details">
-        <p class="pricing__price">$75</p>
+        <article class="pricing__details-card">
+ <p class="pricing__price">$75</p>
         <h3 class="pricing__plan-title">Full Checkup</h3>
         <ul class="pricing__features">
           <li>Checkup by a veterinarian</li>
@@ -190,8 +194,7 @@
               xml:space="preserve"
               x="0px"
               y="0px"
-              height="100%"
-            >
+              height="100%">
               <g fill="currentColor">
                 <g fill="currentColor">
                   <g fill="currentColor">
@@ -221,8 +224,7 @@
               xml:space="preserve"
               x="0px"
               y="0px"
-              height="100%"
-            >
+              height="100%">
               <g fill="currentColor">
                 <g fill="currentColor">
                   <g fill="currentColor">
@@ -252,8 +254,7 @@
               viewBox="0 0 1000 1000"
               style="enable-background: new 0 0 1000 1000; max-width: 100%"
               xml:space="preserve"
-              height="100%"
-            >
+              height="100%">
               <path
                 d="M620.4,500l177.4-177.4c33.1-33.1,33.1-87.3,0-120.4l0,0c-33.1-33.1-87.3-33.1-120.4,0L500,379.6L322.6,202.2  c-33.1-33.1-87.3-33.1-120.4,0l0,0c-33.1,33.1-33.1,87.3,0,120.4L379.6,500L202.2,677.4c-33.1,33.1-33.1,87.3,0,120.4l0,0  c33.1,33.1,87.3,33.1,120.4,0L500,620.4l177.4,177.4c33.1,33.1,87.3,33.1,120.4,0l0,0c33.1-33.1,33.1-87.3,0-120.4L620.4,500z"
                 fill="currentColor"
@@ -263,7 +264,9 @@
         </ul>
         <a href="#" class="pricing__select-plan">Select Plan &rarr;</a>
       </div>
+        </article>
       <div class="pricing__details">
+        <article class="pricing__details-card">
         <p class="pricing__price">$100</p>
         <h3 class="pricing__plan-title">Vaccination</h3>
         <ul class="pricing__features">
@@ -278,8 +281,7 @@
               xml:space="preserve"
               x="0px"
               y="0px"
-              height="100%"
-            >
+              height="100%">
               <g fill="currentColor">
                 <g fill="currentColor">
                   <g fill="currentColor">
@@ -309,8 +311,7 @@
               xml:space="preserve"
               x="0px"
               y="0px"
-              height="100%"
-            >
+              height="100%">
               <g fill="currentColor">
                 <g fill="currentColor">
                   <g fill="currentColor">
@@ -340,8 +341,7 @@
               xml:space="preserve"
               x="0px"
               y="0px"
-              height="100%"
-            >
+              height="100%">
               <g fill="currentColor">
                 <g fill="currentColor">
                   <g fill="currentColor">
@@ -396,6 +396,7 @@
           <a href="#" class="pricing__select-plan">Select Plan <span class="pricing__select-arrow">&rarr;</span> </a>
         </div>
       </div>
+        </article>
       <button type="button" class="pricing__arrow">
         <svg class="arrow-svg_1j4" viewBox="0 0 30 30">
           <defs>
