--- a/index.faq.partial.html
+++ b/index.faq.partial.html
@@ -1,9 +1,9 @@
 <section class="faq">
     <div class="faq__animals-photo-list">
         <button class="faq__animals-photo-previous" type="button">←</button>
-        <img width="435" src="img/faq-slider-dog.webp" alt="photo1" class="faq__animals-photo-item">
-        <img width="435" src="img/faq-slider-cat.webp" alt="photo2" class="faq__animals-photo-item">
-        <img width="435" src="img/faq-slider-carrot.webp" alt="photo3" class="faq__animals-photo-item">
+        <img src="img/faq-slider-dog.webp" alt="photo1" class="faq__animals-photo-item">
+        <img src="img/faq-slider-cat.webp" alt="photo2" class="faq__animals-photo-item">
+        <img src="img/faq-slider-carrot.webp" alt="photo3" class="faq__animals-photo-item">
         <button class="faq__animals-photo-next" type="button">→</button>
     </div>
     <article class="faq__default-answers">
@@ -20,6 +20,7 @@
             </button>
             <p class="faq__default-answers__answer">Certainly. Our veterinary clinic has all the necessary licenses and permits. We provide them upon request.</p>
         </div>
+        <hr>
         <div class="faq__default-answers__item">
             <h4 class="faq__default-answers__quastion">What kind of animals do you treat?</h4>
             <button class="faq__default-answers__show-aswer" type="button">
@@ -30,6 +31,7 @@
             </button>
             <p class="faq__default-answers__answer">Our staff consists of veterinarians of various profiles. We treat almost all animals, from cats and dogs to exotic species of parrots.</p>
         </div>
+        <hr>
         <div class="faq__default-answers__item">
             <h4 class="faq__default-answers__quastion">Is home visit possible?</h4>
             <button class="faq__default-answers__show-aswer" type="button">
@@ -40,6 +42,7 @@
             </button>
             <p class="faq__default-answers__answer">A home visit is possible only in case of emergency, if it is dangerous to transport the animal to our clinic.</p>
         </div>
+        <hr>
         <div class="faq__default-answers__item">
             <h4 class="faq__default-answers__quastion">How are payments made for your services?</h4>
             <button class="faq__default-answers__show-aswer" type="button">
@@ -49,6 +52,7 @@
                 </svg>
             </button>
             <p class="faq__default-answers__answer">You can pay for our services in any convenient way. We accept cash, cashless payments, and credit cards. </p>
+        <hr>
         </div>
     </article>
 </section>
