Develop css of FAQ block

--- a/index.faq.partial.html
+++ b/index.faq.partial.html
@@ -1,58 +1,72 @@
 <section class="faq">
-    <div class="faq__animals-photo-list">
-        <button class="faq__animals-photo-previous" type="button">←</button>
-        <img src="img/faq-slider-dog.webp" alt="photo1" class="faq__animals-photo-item">
-        <img src="img/faq-slider-cat.webp" alt="photo2" class="faq__animals-photo-item">
-        <img src="img/faq-slider-carrot.webp" alt="photo3" class="faq__animals-photo-item">
-        <button class="faq__animals-photo-next" type="button">→</button>
+    <div class="faq__all-block">
+        <div class="faq__animals-photo-list">
+            <button class="faq__animals-photo-previous" type="button">
+                <svg class="arrow-svg_2ub" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a"></use></svg>
+            </button>
+            <img src="img/faq-slider-dog.webp" alt="photo1" class="faq__animals-photo-item">
+            <img src="img/faq-slider-cat.webp" alt="photo2" class="faq__animals-photo-item">
+            <img src="img/faq-slider-carrot.webp" alt="photo3" class="faq__animals-photo-item">
+            <button class="faq__animals-photo-next" type="button">
+                <svg class="arrow-svg_2ub" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a"></use></svg>
+            </button>
+        </div>
+        <article class="faq__default-answers">
+            <h2 class="faq__default-answers__title">—FAQ</h2>
+            <h3 class="faq__default-answers__headline">Welcome to Healthy Pet</h3>
+            <p class="faq__default-answers__caption">We do our best to keep your pets healthy. We bring to your attention the answers to the main questions that are most often asked by the clients of our clinic.</p>
+            <div class="faq__default-answers__item">
+                <div class="faq__default-answers__item__inline">
+                    <h4 class="faq__default-answers__quastion">Do you have a license?</h4>
+                    <button class="faq__default-answers__show-aswer" type="button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
+                            <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
+                            </path>
+                        </svg>
+                    </button>
+                </div>
+                <p class="faq__default-answers__answer">Certainly. Our veterinary clinic has all the necessary licenses and permits. We provide them upon request.</p>
+            </div>
+            <hr>
+            <div class="faq__default-answers__item">
+                <div class="faq__default-answers__item__inline">
+                    <h4 class="faq__default-answers__quastion">What kind of animals do you treat?</h4>
+                    <button class="faq__default-answers__show-aswer" type="button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
+                            <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
+                            </path>
+                        </svg>
+                    </button>
+                </div>
+                <p class="faq__default-answers__answer">Our staff consists of veterinarians of various profiles. We treat almost all animals, from cats and dogs to exotic species of parrots.</p>
+            </div>
+            <hr>
+            <div class="faq__default-answers__item">
+                <div class="faq__default-answers__item__inline">
+                    <h4 class="faq__default-answers__quastion">Is home visit possible?</h4>
+                    <button class="faq__default-answers__show-aswer" type="button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
+                            <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
+                            </path>
+                        </svg>
+                    </button>
+                </div>
+                <p class="faq__default-answers__answer">A home visit is possible only in case of emergency, if it is dangerous to transport the animal to our clinic.</p>
+            </div>
+            <hr>
+            <div class="faq__default-answers__item">
+                <div class="faq__default-answers__item__inline">
+                    <h4 class="faq__default-answers__quastion">How are payments made for your services?</h4>
+                    <button class="faq__default-answers__show-aswer" type="button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
+                            <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
+                            </path>
+                        </svg>
+                    </button>
+                </div>
+                <p class="faq__default-answers__answer">You can pay for our services in any convenient way. We accept cash, cashless payments, and credit cards. </p>
+            <hr>
+            </div>
+        </article>
     </div>
-    <article class="faq__default-answers">
-        <h2 class="faq__default-answers__title">—FAQ</h2>
-        <h3 class="faq__default-answers__headline">Welcome to Healthy Pet</h3>
-        <p class="faq__default-answers__caption">We do our best to keep your pets healthy. We bring to your attention the answers to the main questions that are most often asked by the clients of our clinic.</p>
-        <div class="faq__default-answers__item">
-            <h4 class="faq__default-answers__quastion">Do you have a license?</h4>
-            <button class="faq__default-answers__show-aswer" type="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
-                    <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
-                    </path>
-                </svg>
-            </button>
-            <p class="faq__default-answers__answer">Certainly. Our veterinary clinic has all the necessary licenses and permits. We provide them upon request.</p>
-        </div>
-        <hr>
-        <div class="faq__default-answers__item">
-            <h4 class="faq__default-answers__quastion">What kind of animals do you treat?</h4>
-            <button class="faq__default-answers__show-aswer" type="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
-                    <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
-                    </path>
-                </svg>
-            </button>
-            <p class="faq__default-answers__answer">Our staff consists of veterinarians of various profiles. We treat almost all animals, from cats and dogs to exotic species of parrots.</p>
-        </div>
-        <hr>
-        <div class="faq__default-answers__item">
-            <h4 class="faq__default-answers__quastion">Is home visit possible?</h4>
-            <button class="faq__default-answers__show-aswer" type="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
-                    <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
-                    </path>
-                </svg>
-            </button>
-            <p class="faq__default-answers__answer">A home visit is possible only in case of emergency, if it is dangerous to transport the animal to our clinic.</p>
-        </div>
-        <hr>
-        <div class="faq__default-answers__item">
-            <h4 class="faq__default-answers__quastion">How are payments made for your services?</h4>
-            <button class="faq__default-answers__show-aswer" type="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15">
-                    <path fill-rule="nonzero" d="M7.5 9.066L2.12 4.284a1.12 1.12 0 0 0-1.49 0c-.44.39-.44.997 0 1.388l6.125 5.444c.198.176.5.284.745.284.301 0 .526-.089.745-.284l6.125-5.444c.225-.2.33-.41.33-.694s-.105-.495-.33-.694a1.12 1.12 0 0 0-1.49 0L7.5 9.066z">     
-                    </path>
-                </svg>
-            </button>
-            <p class="faq__default-answers__answer">You can pay for our services in any convenient way. We accept cash, cashless payments, and credit cards. </p>
-        <hr>
-        </div>
-    </article>
 </section>
