added styling to pricing plan section

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -143,7 +143,10 @@
               </svg>
             </div>
           </ul>
-          <a href="#" class="pricing__select-plan">Select Plan &rarr;</a>
+          <div class="pricing__select-button">
+            <a href="#" class="pricing__select-plan"><span class="pricing__select-bn-content">Select Plan</span>&rarr;</a>
+          </div>
+          
         </article>
       </div>
 
@@ -265,7 +268,10 @@
               </svg>
             </div>
           </ul>
-          <a href="#" class="pricing__select-plan">Select Plan &rarr;</a>
+          <div class="pricing__select-button">
+            <a href="#" class="pricing__select-plan"><span class="pricing__select-bn-content">Select Plan</span> &rarr;</a>
+          </div>
+          
         </article>
       </div>
 
@@ -399,9 +405,9 @@
               </svg>
             </div>
           </ul>
-          <div class="pricing__button">
+          <div class="pricing__select-button">
             <a href="#" class="pricing__select-plan"
-              >Select Plan <span class="pricing__select-arrow">&rarr;</span>
+              ><span class="pricing__select-bn-content">Select Plan</span>&rarr;</a>
             </a>
           </div>
         </article>
