--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -41,8 +41,7 @@
         <article class="pricing__details-card">
           <p class="pricing__price">$50</p>
           <h3 class="pricing__plan-title">Initial Checkup</h3>
-          <ul class="pricing__features">
-            <li>Checkup by a veterinarian</li>
+          <div class="pricing__features">
             <div class="pricing__features-checkmark">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -73,7 +72,6 @@
                 </g>
               </svg>
             </div>
-            <li>Care recommendations</li>
             <div class="pricing__features-checkmark">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -104,7 +102,6 @@
                 </g>
               </svg>
             </div>
-            <li>Laboratory tests</li>
             <div class="pricing__features-crossmark">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -123,7 +120,6 @@
                 ></path>
               </svg>
             </div>
-            <li>Dental care</li>
             <div class="pricing__features-crossmark">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -142,14 +138,21 @@
                 ></path>
               </svg>
             </div>
-          </ul>
-          <div class="pricing__select-button">
-            <a href="#" class="pricing__select-plan"><span class="pricing__select-bn-content">Select Plan</span>&rarr;</a>
+            <div class="pricing__features-list">
+              <p>Checkup by a veterinarian</p>
+              <p>Care recommendations</p>
+              <p>Laboratory tests</p>
+              <p>Dental care</p>
+            </div>
           </div>
-          
+          <div class="pricing__select-button">
+            <a href="#" class="pricing__select-plan"
+              ><span class="pricing__select-bn-content">Select Plan</span
+              >&rarr;</a
+            >
+          </div>
         </article>
       </div>
-
       <div class="pricing__details">
         <article class="pricing__details-card">
           <p class="pricing__price">$75</p>
@@ -269,9 +272,11 @@
             </div>
           </ul>
           <div class="pricing__select-button">
-            <a href="#" class="pricing__select-plan"><span class="pricing__select-bn-content">Select Plan</span> &rarr;</a>
+            <a href="#" class="pricing__select-plan"
+              ><span class="pricing__select-bn-content">Select Plan</span>
+              &rarr;</a
+            >
           </div>
-          
         </article>
       </div>
 
@@ -407,8 +412,9 @@
           </ul>
           <div class="pricing__select-button">
             <a href="#" class="pricing__select-plan"
-              ><span class="pricing__select-bn-content">Select Plan</span>&rarr;</a>
-            </a>
+              ><span class="pricing__select-bn-content">Select Plan</span
+              >&rarr;</a
+            >
           </div>
         </article>
       </div>
