add mask for svg

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -42,9 +42,7 @@
           <p class="pricing__price">$50</p>
           <h3 class="pricing__plan-title">Initial Checkup</h3>
           <ul class="pricing__features">
-            <li class="pricing__features-checkmark">
-              Checkup by a veterinarian
-            </li>
+            <li class="pricing__features-checkmark">Checkup by a veterinarian</li>
             <li class="pricing__features-checkmark">Care recommendations</li>
             <li class="pricing__features-crossmark">Laboratory tests</li>
             <li class="pricing__features-crossmark">Dental care</li>
