--- a/index.carousel.with.animal.partial.html
+++ b/index.carousel.with.animal.partial.html
@@ -1,1 +1,29 @@
-<!--- Kazymyr D каруселька з блоку 7 з тваринками ---!>
+<div class="carousel-container">
+  <div class="carousel-slide" id="slide1">
+    <h1>Casper</h1>
+    <p>
+      "Jumping from a tree, i injured my paw. My parents took me to the clinic
+      for an examination. The doctor looked at my paw, took an X-ray, and said
+      it wa just a bruise. He prescribed me a treatment, and after a week I
+      could fully step on my paw again"
+    </p>
+  </div>
+  <div class="carousel-slide" id="slide2">
+    <h1>Jackkie</h1>
+    <p>
+      “My owners love me very much. They immediately noticed that I was sitting
+      on the perch all day and not eating anything. They took me to this clinic.
+      The doctor immediately discovered why I felt bad and prescribed treatment.
+      Now everything is fine with me.”
+    </p>
+  </div>
+  <div class="carousel-slide" id="slide3">
+    <h1>Dionis</h1>
+    <p>
+      “Many thanks to the veterinarians of this clinic for being so good, kind
+      and professional. My parents regularly bring me to see them. The doctors
+      of this clinic are very careful and do not cause any discomfort. Even
+      vaccinations do not hurt. ”
+    </p>
+  </div>
+</div>
