--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section data-include="index.about-us.partial.html"></section> <!--перемещен на верное место-->
       <!--тут видео с котом от Дурягін Олег-->
       <section data-include="index.pricing.partial.html"></section>
-      <!--тут блок Казимир Дарія-->
+      <section data-include="index.carousel.with.animal.partial.html"></section>
       <!--тут желтый блок Дутко Максим-->
       <section data-include="index.faq.partial.html"></section>
       <section data-include="index.partners-carousel.partial.html"></section>
