--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,6 +1,6 @@
 <section class="contacts">
     <h2 class="contacts__title">Contacts</h2>
-    <div>
+    <div class="contacts_havequastion">
         <p><b>Have Quastions?</b></p>
     </div>
     <div class="contacts__address">
