put form in box

--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -23,6 +23,7 @@
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
+        <div class="contacts__form-box">
         <form class="contacts__form" action="https://formspree.io/f/mleqeqap" method="post">
             <input type="text" name="full-name" placeholder="enter your full name" required>
             <input type="tel" name="full-name" placeholder="enter your tel" required>
@@ -30,5 +31,7 @@
             <textarea name="comments" cols="30" rows="10" placeholder="comments"></textarea>
             <input type="submit" value="Request a quote">
         </form>
+    </div>
+
     </div>
 </section>
