add section data include service-carousel

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <section data-include="banner.partial.dog-about-us.html"></section>
       <section data-include="index.why-us.partial.html"></section>
-      <!--тут карусель Дербак Ольга-->
+      <section data-include="index.service-carousel.partial.html"></section>
       <section data-include="index.about-us.partial.html"></section> <!--перемещен на верное место-->
       <!--тут видео с котом от Дурягін Олег-->
       <section data-include="index.pricing.partial.html"></section>
