--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!--тут видео с котом от Дурягін Олег-->
       <section data-include="index.pricing.partial.html"></section>
       <section data-include="index.carousel.with.animal.partial.html"></section>
-      <!--тут желтый блок Дутко Максим-->
+      <section data-include="index.care.partial.html"></section>
       <section data-include="index.faq.partial.html"></section>
       <section data-include="index.partners-carousel.partial.html"></section>
       <section data-include="index.contacts.partial.html"></section>
