--- a/index.care.partial.html
+++ b/index.care.partial.html
@@ -1,10 +1,8 @@
 <section class="care">
-  <h1>- We provide care that your pet deserves
+  <h1>- We provide care that your pet deserves</h1>
     <h2>Do you urgently need a veterinarian?
-      <br>Just call us +1 (234) 567 89 00
+      <br>Just call us +1 (234) 567 89 00</h2>
       <p>For emergencies, we have a veterinarian on duty 
         <br>after the closure of the clinic.
       </p>
-    </h2>
-  </h1>
 </section>
