--- a/index.care.partial.html
+++ b/index.care.partial.html
@@ -1,8 +1,8 @@
 <section class="care">
-  <h1>- We provide care that your pet deserves</h1>
-    <h2>Do you urgently need a veterinarian?
+  <h1 class="main-title">- We provide care that your pet deserves</h1>
+    <h2 class="sub-title">Do you urgently need a veterinarian?
       <br>Just call us +1 (234) 567 89 00</h2>
-      <p>For emergencies, we have a veterinarian on duty 
+      <p class="emergency-text">For emergencies, we have a veterinarian on duty 
         <br>after the closure of the clinic.
       </p>
 </section>
