create pricing schedule items class in html

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -9,40 +9,31 @@
         work 7 days a week but recommend making an appointment in advance.
       </p>
       <div class="pricing__schedule">
-        <div class="pricing__day">
-          <p>Mon - Fr:</p>
-          <p>Saturday:</p>
-          <p>Sunday</p>
-        </div>
-        <div class="pricing__time">
-          <p>08.00 am - 20.00 pm</p>
-          <p>09.00 am - 20.00 pm</p>
-          <p>09.00 am - 18.00 pm</p>
+        <div>
+          <div class="pricing__schedule-items">
+            <p class="pricing__day">Mon - Fr:</p>
+            <p class="pricing__time">08.00 am - 20.00 pm</p>
+          </div>
+          <div class="pricing__schedule-items">
+            <p class="pricing__day">Saturday:</p>
+            <p class="pricing__time">09.00 am - 20.00 pm</p>
+          </div>
+          <div>
+            <p class="pricing__day">Sunday</p>
+            <p class="pricing__time">09.00 am - 18.00 pm</p>
+          </div>
         </div>
       </div>
     </div>
     <div class="pricing__plan">
-      <button type="button" class="pricing__arrow">
-        <svg class="arrow-svg" viewBox="0 0 30 30">
-          <defs>
-            <path
-              d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
-              id="a-1704797658501"
-            ></path>
-          </defs>
-          <use
-            fill-rule="nonzero"
-            opacity=".8"
-            xlink:href="#a-1704797658501"
-          ></use>
-        </svg>
-      </button>
       <div class="pricing__details">
         <article class="pricing__details-card">
           <p class="pricing__price">$50</p>
           <h3 class="pricing__plan-title">Initial Checkup</h3>
           <ul class="pricing__features">
-            <li class="pricing__features-checkmark">Checkup by a veterinarian</li>
+            <li class="pricing__features-checkmark">
+              Checkup by a veterinarian
+            </li>
             <li class="pricing__features-checkmark">Care recommendations</li>
             <li class="pricing__features-crossmark">Laboratory tests</li>
             <li class="pricing__features-crossmark">Dental care</li>
@@ -93,6 +84,21 @@
           </div>
         </article>
       </div>
+      <button type="button" class="pricing__arrow">
+        <svg class="arrow-svg" viewBox="0 0 30 30">
+          <defs>
+            <path
+              d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
+              id="a-1704797658501"
+            ></path>
+          </defs>
+          <use
+            fill-rule="nonzero"
+            opacity=".8"
+            xlink:href="#a-1704797658501"
+          ></use>
+        </svg>
+      </button>
       <button type="button" class="pricing__arrow">
         <svg class="arrow-svg_1j4" viewBox="0 0 30 30">
           <defs>
