--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -26,7 +26,8 @@
                     </iframe>
                 </div>
             </div>
-
+        </div>
+        <div>
             <div class="contacts__form-box">
                 <form class="contacts__form" action="https://formspree.io/f/mleqeqap" method="post">
                     <input type="text" name="full-name" placeholder="enter your full name" required>
