--- a/index.carousel.with.animal.partial.html
+++ b/index.carousel.with.animal.partial.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="car.css">
 <div class="carousel-container">
   <div class="carousel-slide" id="slide1">
     <h1>Casper</h1>
@@ -26,4 +27,7 @@
       vaccinations do not hurt. ”
     </p>
   </div>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
+
