--- a/banner.partial.dog-about-us.html
+++ b/banner.partial.dog-about-us.html
@@ -1,10 +1,11 @@
 <section class="banner__nav">
     <div class="banner">
-        <img src="https://res2.weblium.site/res/5f66341807730000225f82ac/5f69efd3c0c73d0021df2614" alt="Our happy dog">
+        <div class="banner__text">
         <p class="banner__paragraph">-Hello, We're Healthy Pet</p>
         <h2 class="banner__secondblock--heading">We take care of<br>Your Pets as if They<br>Where Our Own.</h2>
         <p class="banner__secondblock--secondparagraph">Welcome to our veterinary clinic in<br> New York. We will make sure that your<br> pet is always healthy and cheerful.</p>  
         <button type="button__banner--pagedown">Make Appointment</button>
         <button type="button__banner--tel">+1 (234) 567 89 00</button>
+        </div>
     </div>
 </section>
