--- a/index.faq.partial.html
+++ b/index.faq.partial.html
@@ -2,13 +2,19 @@
     <div class="faq__all-block">
         <div class="faq__animals-photo-list">
             <button class="faq__animals-photo-previous" type="button">
-                <svg class="arrow-svg_2ub" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a"></use></svg>
+                <div class="arrow-button">
+                    <svg class="arrow-svg_2ub arrow-animal" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a"></use></svg>
+                </div>
             </button>
-            <img src="img/faq-slider-dog.webp" alt="photo1" class="faq__animals-photo-item">
-            <img src="img/faq-slider-cat.webp" alt="photo2" class="faq__animals-photo-item">
-            <img src="img/faq-slider-carrot.webp" alt="photo3" class="faq__animals-photo-item">
+            <div class="faq__animals-photo-list__items">
+                <img src="img/faq-slider-dog.webp" alt="photo1" class="faq__animals-photo-item">
+                <img src="img/faq-slider-cat.webp" alt="photo2" class="faq__animals-photo-item">
+                <img src="img/faq-slider-carrot.webp" alt="photo3" class="faq__animals-photo-item">
+            </div>
             <button class="faq__animals-photo-next" type="button">
-                <svg class="arrow-svg_2ub" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a"></use></svg>
+                <div class="arrow-button">
+                    <svg class="arrow-svg_2ub arrow-animal" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a"></use></svg>
+                </div>
             </button>
         </div>
         <article class="faq__default-answers">
