--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -3,7 +3,7 @@
         <div>
             <h2 class="contacts__title">Contacts</h2>
             <div class="contacts_havequastion">
-                <p><b>Have Quastions?</b></p>
+                <p class="contacts__mainquastion"><b>Have Quastions?</b></p>
             </div>
             <div class="contacts__address">
                 <p><b>Address</b> 80-05 78th Ave
@@ -30,11 +30,11 @@
         <div>
             <div class="contacts__form-box">
                 <form class="contacts__form" action="https://formspree.io/f/mleqeqap" method="post">
-                    <input type="text" name="full-name" placeholder="enter your full name" required>
-                    <input type="tel" name="full-name" placeholder="enter your tel" required>
-                    <input type="email" name="full-name" placeholder="enter your email" required>
-                    <textarea name="comments" cols="30" rows="10" placeholder="comments"></textarea>
-                    <input type="submit" value="Request a quote">
+                    <input class="contacts__form-box-name" type="text" name="full-name" placeholder="enter your full name*" required>
+                    <input class="contacts__form-box-tel" type="tel" name="full-name" placeholder="enter your tel*" required>
+                    <input class="contacts__form-box-email" type="email" name="full-name" placeholder="enter your email*" required>
+                    <textarea class="contacts__form-box-comments" name="comments" cols="30" rows="10" placeholder="comments"></textarea>
+                    <input class="contacts__form-box-raq" type="submit" value="Request a quote">
                 </form>
             </div>
         </div>
