--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,6 +1,6 @@
 <section class="contacts">
     <div class="contacts__commonbox">
-        <div>
+        <div class="contacts__information">
             <div>
                 <h2 class="contacts__title">-Contacts</h2>
             </div>
@@ -12,7 +12,7 @@
                 <p><b>Address</b> 80-05 78th Ave
                     Flushing, NY 11385</p>
             </div>
-            <div class="contacts__pours">
+            <div class="contacts__hours">
                 <p><b>Hours</b> Monday - Saturday: 11 AM - 9 PM
                     Sunday: 11 AM - 7 PM</p>
             </div>
