delete pricing css and make new schedule styling with media query

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -1,7 +1,7 @@
-<section class="pricing">
+<section class="pricing container">
   <div class="pricing__content">
     <div class="pricing__info">
-      <h2 class="pricing__title">&ndash; Pricing</h2>
+      <h2 class="pricing__title">&#8212; Pricing</h2>
       <h3 class="pricing__subtitle">Pricing Plans and our Services</h3>
       <p class="pricing__description">
         We offer our clients all the necessary services for the health of their
@@ -9,19 +9,17 @@
         work 7 days a week but recommend making an appointment in advance.
       </p>
       <div class="pricing__schedule">
-        <div>
-          <div class="pricing__schedule-items">
-            <p class="pricing__day">Mon - Fr:</p>
-            <p class="pricing__time">08.00 am - 20.00 pm</p>
-          </div>
-          <div class="pricing__schedule-items">
-            <p class="pricing__day">Saturday:</p>
-            <p class="pricing__time">09.00 am - 20.00 pm</p>
-          </div>
-          <div>
-            <p class="pricing__day">Sunday</p>
-            <p class="pricing__time">09.00 am - 18.00 pm</p>
-          </div>
+        <div class="pricing__schedule-items">
+          <p class="pricing__day">Mon - Fr:</p>
+          <p class="pricing__time">08.00 am - 20.00 pm</p>
+        </div>
+        <div class="pricing__schedule-items">
+          <p class="pricing__day">Saturday:</p>
+          <p class="pricing__time">09.00 am - 20.00 pm</p>
+        </div>
+        <div class="pricing__schedule-items">
+          <p class="pricing__day">Sunday</p>
+          <p class="pricing__time">09.00 am - 18.00 pm</p>
         </div>
       </div>
     </div>
@@ -78,14 +76,14 @@
           </ul>
           <div class="pricing__select-button">
             <a href="#" class="pricing__select-plan"
-              ><span class="pricing__select-bn-content">Select Plan</span
-              >&rarr;</a
+              ><span class="pricing__select-bn-content">Select Plan</span>
+              &rarr;</a
             >
           </div>
         </article>
       </div>
-      <button type="button" class="pricing__arrow">
-        <svg class="arrow-svg" viewBox="0 0 30 30">
+      <button type="button" class="pricing__arrow-left">
+        <svg class="arrow__svg-left" viewBox="0 0 30 30">
           <defs>
             <path
               d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
@@ -99,8 +97,8 @@
           ></use>
         </svg>
       </button>
-      <button type="button" class="pricing__arrow">
-        <svg class="arrow-svg_1j4" viewBox="0 0 30 30">
+      <button type="button" class="pricing__arrow-right">
+        <svg class="arrow__svg-right" viewBox="0 0 30 30">
           <defs>
             <path
               d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
@@ -114,6 +112,9 @@
           ></use>
         </svg>
       </button>
+      <div>
+        <ul></ul>
+      </div>
     </div>
   </div>
 </section>
