--- a/header.partial.html
+++ b/header.partial.html
@@ -2,7 +2,7 @@
 <header class="container-lg row justify-content-lg-center ">
     <nav class="navbar navbar-expand-md navbar-light justify-content-lg-center col-lg-12 col-md-12">
         <nav class="navbar navbar-expand-md navbar-light justify-content-center col-12">
-            <a class="navbar-brand " href="#"> <img class="" src="img/header_logo.webp" width="140"
+            <a class="navbar-brand " href="index.html"> <img class="" src="img/header_logo.webp" width="140"
                                                     height="35"
                                                     alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
