--- a/header.partial.html
+++ b/header.partial.html
@@ -5,9 +5,9 @@
             <a class="navbar-brand " href="index.html"> <img class="" src="img/header_logo.webp" width="140"
                                                     height="35"
                                                     alt="logo"></a>
-            <!--<a class="navbar-brand pl-5 text-info" href="#">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
+            <a class="navbar-brand pl-5 text-info" href="https://2024js.github.io/vetesite2/">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
                                                                              height="20"
-                                                                             alt="logo"></a>-->
+                                                                             alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
