--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -56,9 +56,12 @@
     </div>
     <div id="partners-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="Pet Grooming" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="Pet Vaccination" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="Surgeries and Dental Care" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="Pet Adoption" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="Pet Sitting" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="Adoptation" data-bs-slide-to="5" aria-label="Slide 6"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
